force-app/hfs-backend/main/default/objects/hfs_Program_Enrolment__c/hfs_Program_Enrolment__c.object-meta.xml
<CustomObject>
    <description>Junction linking a User to a Program (this user is enrolled in this program). My Programs lists only the running user&apos;s Enrolled rows; zero rows drives the empty state.</description>
    <label>Program Enrolment</label>
    <nameField>
        <displayFormat>ENR-{00000}</displayFormat>
        <label>Enrolment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrolments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>