force-app/hfs-backend/main/default/objects/hfs_Program_Enrolment__c/fields/hfs_Enrolment_Key__c.field-meta.xml
<CustomField>
    <fullName>hfs_Enrolment_Key__c</fullName>
    <description>Unique Member+Program key (format MemberId:ProgramId). Enforces one enrolment per user per program so a program cannot appear more than once in My Programs.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique key in the format MemberId:ProgramId. Prevents enrolling the same user in the same program twice.</inlineHelpText>
    <label>Enrolment Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>