force-app/hfs-backend/main/default/objects/hfs_Program_Enrolment__c/fields/hfs_Member__c.field-meta.xml
<CustomField>
    <fullName>hfs_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The enrolled user. Per-user scoping is enforced in the SOQL WHERE clause.</description>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Program Enrolments</relationshipLabel>
    <relationshipName>Program_Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>