force-app/hfs-backend/main/default/objects/hfs_Program_Enrolment__c/fields/hfs_Program__c.field-meta.xml
<CustomField>
    <fullName>hfs_Program__c</fullName>
    <description>The enrolled program (parent).</description>
    <label>Program</label>
    <referenceTo>hfs_Program__c</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>