force-app/hfs-backend/main/default/objects/hfs_Program_Enrolment__c/fields/hfs_Status__c.field-meta.xml
<CustomField>
    <fullName>hfs_Status__c</fullName>
    <description>Enrolment status. Only Enrolled rows are listed in My Programs.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
                <default>true</default>
                <label>Enrolled</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>